--- a/directives-pipes/package.json
+++ b/directives-pipes/package.json
@@ -6,7 +6,15 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "prepare": "husky",
+    "check:forbidden-words": "npx lint-staged --allow-empty --config .lintstagedrc-check"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,css,scss,html}": [
+      "npx prettier --write",
+      "npx eslint --fix"
+    ]
   },
   "private": true,
   "dependencies": {
@@ -27,12 +35,14 @@
     "@angular/cli": "^19.1.6",
     "@angular/compiler-cli": "^19.1.0",
     "@types/jasmine": "~5.1.0",
+    "husky": "^9.1.7",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "lint-staged": "^16.1.2",
     "typescript": "~5.7.2"
   }
 }
