--- a/directives-pipes/tsconfig.json
+++ b/directives-pipes/tsconfig.json
@@ -16,7 +16,10 @@
     "moduleResolution": "bundler",
     "importHelpers": true,
     "target": "ES2022",
-    "module": "ES2022"
+    "module": "ES2022",
+    "paths":{
+      "@components/*":["./src/app/components/*"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
@@ -24,8 +27,5 @@
     "strictInputAccessModifiers": true,
     "strictTemplates": true
   },
-  "paths":{
-    "@components/*":["./src/app/components/*"]
-  }
   
 }
